# Weaver

./: .gitignore  BancoPalabras.cpp  BancoPalabras.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Graph.cpp  Graph.h  List.cpp  List.h  Solucionador.cpp  Solucionador.h  Vista.cpp  Vista.h  main.cpp
archivos/: bucket.txt  hola1.txt  palabras.txt  partidas.txt
